@@ -1,3 +1,9 @@
+2024-04-18  Karl Berry  <karl@freefriends.org>
+
+	* tlbuild.texi (Macros for compilers): mention that
+	-fvisibility-inlines-hidden is not for C,
+	and index -fvisibility... options.
+
 2023-12-23  Karl Berry  <karl@tug.org>
 
 	* build-tools: autoconf 2.72 and (belatedly) makeinfo 7.1
